# wordnetbot

./: .gitignore  bot-test.hs  bot2.hs  compile.sh  sample.txt  wordnetbot.cabal  wordnetbot.hs
WordNet/NLP/: WordNet.hs
WordNet/NLP/WordNet/: PrimTypes.hs  Prims.hs
src/: wordnetbot.hs
src/NLP/WordNet/: PrimTypes.hs  Prims.hs
